--- a/src/about.html
+++ b/src/about.html
@@ -21,6 +21,7 @@
       </div>
       <div id="menu-bar">
         <button class="menubar-btn" id="home-btn" aria-label="Yoo-Math homepage" data-microtip-position="right" role="tooltip"><img src="assets/img/home-small.png" alt="Home" /></button>
+        <button class="menubar-btn" id="calculator-btn" aria-label="Yoo-Math Calculator" data-microtip-position="right" role="tooltip"><img src="assets/img/calculator-small.png" alt="Calculator" /></button>
         <button class="menubar-btn active" id="about-btn" aria-label="About Yoo-Math" data-microtip-position="right" role="tooltip"><img src="assets/img/info-small.png" alt="About" /></button>
         <button class="menubar-btn" id="history-btn" aria-label="Yoo-Math History" data-microtip-position="right" role="tooltip"><img src="assets/img/history-small.png" alt="History" /></button>
         <button class="menubar-btn" id="pin-btn" aria-label="Pin Yoo-Math to screen" data-microtip-position="right" role="tooltip"><img src="assets/img/pin-small.png" alt="Pin" /></button>
